@@ -85,13 +85,6 @@ log_db_id: ragnarok
 log_db_pw: ragnarok
 log_db: log
 
-// MySQL Mail SQL Server
-mail_server_ip: 127.0.0.1
-mail_server_port: 3306
-mail_server_id: ragnarok
-mail_server_pw: ragnarok
-mail_server_db: ragnarok
-
 // for TXT -> SQL convertors
 db_server_ip: 127.0.0.1
 db_server_port: 3306
